--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,5 +55,12 @@
     "PCALENDAR" : "Payment calendar",
     "BQRO" : "Barcode and QR operations",
     "LOANDATA" : "Loan data",
-    "CREDIT" : "Credit"
+    "CREDIT" : "Credit",
+    "MONDAY" : "MONDAY",
+    "TUESDAY" : "TUESDAY",
+    "WEDNESDAY": "WEDNESDAY",
+    "THURSDAY" : "THURSDAY",
+    "FRIDAY" : "FRIDAY",
+    "SATURDAY" : "SATURDAY",
+    "SUNDAY" : "SUNDAY"
 }
