--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -57,6 +57,11 @@
     "BQRO" : "Operaciones con código de barra y QR",
     "LOANDATA" : "Datos de préstamo",
     "CREDIT" : "Crédito",
+    "REFERENCES": "Referencias de Pagos",
+    "LOANDATA":"Datos de Préstamo",
+    "LOANDETAIL":"Detalle del Credito",
+    "Months": "MESES",
+    "Weeks": "SEMANAS",
     "MONDAY" : "LUNES",
     "TUESDAY" : "MARTES",
     "WEDNESDAY": "MIÉRCOLES",
