Vista para cambiar cpassword

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -12,7 +12,7 @@
     "COMFIRM" : "Confirmar Contraseña",
     "FPASSWORD" : "Olvidé mi contraseña",
     "LOGIN" : "Iniciar sesión",
-    "REGISTER" : "Register",
+    "REGISTER" : "Registro",
     "SIGNIN" : "Registrarse",
     "LOGINGOOGLE" : "Iniciar sesión con Google",
     "ACCESSAPP" : "¿Aún no tienes acceso a nuestra App?",
