Cambios de Barra de Codigo y Solitud de Prestamos

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -56,6 +56,7 @@
     "PCALENDAR" : "Calendario de pagos",
     "BQRO" : "Operaciones con código de barra y QR",
     "LOANDATA" : "Datos de préstamo",
+    "APPLYLOAN": "Solicitar un préstamo",
     "CREDIT" : "Crédito",
     "REFERENCES": "Referencias de Pagos",
     "LOANDATA":"Datos de Préstamo",
