Boton para prestamos pendientes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,13 +55,39 @@
     "MOVEMENTS" : "My movements",
     "PCALENDAR" : "Payment calendar",
     "BQRO" : "Barcode and QR operations",
-    "LOANDATA" : "Loan data",
+    "APPLYLOAN": "Solicitar un préstamo",
     "CREDIT" : "Credit",
+    "REFERENCES": "Referencias de Pagos",
+    "LOANDATA" : "Loan data",
+    "LOANDETAIL":"Detalle del Credito",
+    "Months": "MESES",
+    "Weeks": "SEMANAS",
     "MONDAY" : "MONDAY",
     "TUESDAY" : "TUESDAY",
     "WEDNESDAY": "WEDNESDAY",
     "THURSDAY" : "THURSDAY",
     "FRIDAY" : "FRIDAY",
     "SATURDAY" : "SATURDAY",
-    "SUNDAY" : "SUNDAY"
+    "SUNDAY" : "SUNDAY",
+    "CODE": "Code",
+    "CHANGEPASS":"Change Password",
+    "RESETPASS":"Reset password",
+    "PASSCHANGED":"Password changed",
+    "LOGINAGAIN":"Please login again",
+    "PAIDOUT":"Paid out",
+    "PAYDAYLIMIT":"Payday limit",
+    "AMOUNT":"Amount",
+    "PENDING":"Pending",
+    "NEXTPAYMENT" : "Next payment",
+    "NEXTPAY" : "Next pay",
+    "LATEPAYMENT" : "Late payment",
+    "CHANGELANGUAGE":"Change language",
+    "LOANREQUESTED":"Loan requested",
+    "DEADLINES":"Deadlines",
+    "PAYMENTS":"Payments",
+    "DESTINATION":"destination",
+    "REQUESTDATE" : "Request date",
+    "PERIODS":"Periods",
+    "TODAY":"Today",
+    "PAYMENTMADE": "Payment made"
 }
