--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -55,7 +55,6 @@
     "MOVEMENTS" : "Mis movimientos",
     "PCALENDAR" : "Calendario de pagos",
     "BQRO" : "Operaciones con código de barra y QR",
-    "LOANDATA" : "Datos de préstamo",
     "APPLYLOAN": "Solicitar un préstamo",
     "CREDIT" : "Crédito",
     "REFERENCES": "Referencias de Pagos",
@@ -69,5 +68,26 @@
     "THURSDAY" : "JUEVES",
     "FRIDAY" : "VIERNES",
     "SATURDAY" : "SÁBADO",
-    "SUNDAY" : "DOMINGO"
+    "SUNDAY" : "DOMINGO",
+    "CODE": "Código",
+    "CHANGEPASS":"Cambiar contraseña",
+    "RESETPASS":"Restablecer contraseña",
+    "PASSCHANGED":"contraseña cambiada",
+    "LOGINAGAIN":"Por favor ingrese nuevamente",
+    "PAIDOUT":"Pagado",
+    "PAYDAYLIMIT":"Fecha límite de pago",
+    "AMOUNT":"Monto",
+    "PENDING":"Pendiente",
+    "NEXTPAYMENT" : "Sig. pago",
+    "NEXTPAY" : "Prox. Pago",
+    "LATEPAYMENT" : "Pago atrasado",
+    "CHANGELANGUAGE":"Cambiar idioma",
+    "LOANREQUESTED":"Préstamo solicitado",
+    "DEADLINES":"Deadlines",
+    "PAYMENTS":"Pagos",
+    "DESTINATION":"Destino",
+    "REQUESTDATE" : "Fecha de la solicitud",
+    "PERIODS":"Períodos",
+    "TODAY":"Hoy",
+    "PAYMENTMADE": "Pago realizado"
 }
