Datos faltantes en los prestamos

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -94,5 +94,8 @@
     "LOANREP":"Referenced payment",
     "SAVDEP":"SAVDEP",
     "LOANSUB" : "Credit in process",
-    "LOANAPR" : "Credit approved"
+    "LOANAPR" : "Credit approved",
+    "UPDATEDATA" : "Update data",
+    "SIGNOFF" : "Sign off",
+    "HOME" : "Home"
 }
