--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -83,7 +83,7 @@
     "LATEPAYMENT" : "Pago atrasado",
     "CHANGELANGUAGE":"Cambiar idioma",
     "LOANREQUESTED":"Préstamo solicitado",
-    "DEADLINES":"Deadlines",
+    "DEADLINES":"Plazos",
     "PAYMENTS":"Pagos",
     "DESTINATION":"Destino",
     "REQUESTDATE" : "Fecha de la solicitud",
@@ -92,10 +92,21 @@
     "PAYMENTMADE": "Pago realizado",
     "TOTALB": "Saldo total",
     "LOANREP":"Pago referenciado",
-    "SAVDEP":"SAVDEP",
+    "LOANREPSMS":"Tu pago ha sido aplicado, gracias",
+    "LOANDIS":"Crédito entregado",
+    "LOANDISSMS":"Felicidades tu crédito ha sido entregado! es importante que mantengas un historial limpio",
     "LOANSUB" : "Crédito en proceso",
+    "LOANSUBSMS" : "Tu solicitud ha sido enviada, en breve te contactaremos",
     "LOANAPR" : "Crédito aprobado",
+    "LOANAPRSMS" : "Felicitaciones, su solicitud ha sido aprobada",
     "UPDATEDATA" : "Actualizar datos",
     "SIGNOFF" : "Cerrar sesión",
-    "HOME" : "Inicio"
+    "HOME" : "Inicio",
+    "FOURTEEN" : "CATORCENAS",
+    "BUYLOCAL" : "COMPRAR LOCAL O VEHICULO",
+    "ACQUIREMERCHANDISE" : "ADQUIRIR O COMPRAR MERCANCÍA",
+    "BUYMACHINERY" : "COMPRAR MAQUINARIA, EQUIPO O HERRAMIENTAS",
+    "PAYDEBT" : "PAGAR DEUDAS DEL NEGOCIO",
+    "ANOTHEREND" : "OTRO FIN RELACIONADO",
+    "OUTSIDEBUSINESS" : "FINES AJENOS AL NEGOCIO"
 }
