Traducciones componentes Fabian

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -108,5 +108,60 @@
     "BUYMACHINERY" : "COMPRAR MAQUINARIA, EQUIPO O HERRAMIENTAS",
     "PAYDEBT" : "PAGAR DEUDAS DEL NEGOCIO",
     "ANOTHEREND" : "OTRO FIN RELACIONADO",
-    "OUTSIDEBUSINESS" : "FINES AJENOS AL NEGOCIO"
+    "OUTSIDEBUSINESS" : "FINES AJENOS AL NEGOCIO",
+    "TOTALBALANCE" : "SALDO TOTAL",
+    "START": "Inicio",
+    "BARCODEANDQR":"Codigo de barras y QR",
+    "ASKFORALOAN": "Solicitar un Prestamo",
+    "MYACCOUNTS": "Mis Cuentas",
+    "BALANCETONOTGENERATEINTEREST": "SALDO PARA NO GENERAR INTERESES",
+    "PAYDAYLIMIT": "FECHA LÍMITE DE PAGO",
+    "PAYMENTREFERENCES": "Referencias de Pagos",
+    "REIMBURSEMENT": "Reembolso",
+    "GENERAL": "GENERAL",
+    "PRODUCT": "Producto",
+    "ACCOUNTNUMBER":"Número de Cuenta",
+    "ORIGINALAMOUNT":"Monto Original",
+    "OUTSTANDINGBALANCE":"Saldo Pendiete",
+    "SUBSCRIBEDTOCAPITAL":"Abonado a Capital",
+    "BALANCEDUE":"Saldo Vencido",
+    "TERM":"Plazo",
+    "TYPEOFTERM":"Tipo Plazo",
+    "PENDINGRECEIPTS":"Recibos Pendientes",
+    "NEXTPAYMENTDATE":"Fecha Proximo Pago",
+    "NEXTPAYMENTAMOUNT":"Monto Proximo Pago",
+    "TERMS":"CONDICIONES",
+    "EXPIRATIONDATE":"Fecha de Vencimiento",
+    "AMOUNTREQUESTED":"Monto Solicitado",
+    "TERMLIMIT":"Limite de Plazo",
+    "DESIREDTERM":"Plazo deseado",
+    "PAYMENTFREQUENCY":"Frecuencia de Pago",
+    "DESTINATIONOFTHELOAN":"Destino del Prestamo",
+    "SENDCREDITREQUEST":"Enviar Solicitud de Crédito",
+    "CANCEL":"Cancelar",
+    "TORETURN": "Regresar",
+    "PLEASEWAIT": "Espere Por Favor",
+    "SEEYOUSOON":"Hasta Pronto",
+    "PENDINGREQUEST": "Tiene una solicitud pendiente",
+    "NOTSAVE": "NotSave",
+    "SEMANAS": "SEMANAS",
+    "CATORCENAS": "CATORCENAS",
+    "MESES": "MESES",
+    "SEMANAL": "SEMANAL",
+    "CATORCENAL": "CATORCENAL",
+    "MENSUAL" : "MESUAL",
+    "COMPRAR LOCAL O VEHICULO" : "COMPRAR LOCAL O VEHICULO",
+    "ADQUIRIR O COMPRAR MERCANCIA" :"ADQUIRIR O COMPRAR MERCANCIA",
+    "COMPRAR MAQUINARIA, EQUIPO O HERRAMIENTAS" : "COMPRAR MAQUINARIA, EQUIPO O HERRAMIENTAS",
+    "PAGAR DEUDAS DEL NEGOCIO": "PAGAR DEUDAS DEL NEGOCIO",
+    "OTRO FIN RELACIONADO": "OTRO FIN RELACIONADO",
+    "FINES AJENOS AL NEGOCIO": "FINES AJENOS AL NEGOCIO",
+    "RECIBIDO": "Hemos recibido tu Solicitud",
+    "CONTACT": "Nos pondremos en contacto contigo para",
+    "NOTIFICATION": "notificarte del estatus de tu Solicitud",
+    "APPLICATION": "Te enviaremos notificaciones a tu",
+    "APLI": "aplicacion",
+    "ACEPTAR": "Aceptar"
+    
+
 }
