--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -161,7 +161,9 @@
     "NOTIFICATION": "notificarte del estatus de tu Solicitud",
     "APPLICATION": "Te enviaremos notificaciones a tu",
     "APLI": "aplicacion",
-    "ACEPTAR": "Aceptar"
+    "ACEPTAR": "Aceptar",
+    "SALIR": "Esta seguro de Salir",
+    "CLOSE": "Cerrar Session"
     
 
 }
