Cambios de las Targetas

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -163,5 +163,6 @@
     "APLI": "application",
     "ACEPTAR": "To accept",
     "SALIR": "Are you sure to leave",
-    "CLOSE": "Close session"
+    "CLOSE": "Close session",
+    "STORAGE": "Participating Stores"
 }
