--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -163,7 +163,8 @@
     "APLI": "aplicacion",
     "ACEPTAR": "Aceptar",
     "SALIR": "Esta seguro de Salir",
-    "CLOSE": "Cerrar Session"
+    "CLOSE": "Cerrar Session",
+    "STORAGE": "Tiendas Participantes"
     
 
 }
