se cambio el color de los botones de las alertas

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -162,7 +162,6 @@
     "ACEPTAR": "Aceptar",
     "SALIR": "Esta seguro de Salir",
     "CLOSE": "Cerrar Session",
-    "STORAGE": "Tiendas Participantes"
-    
-
+    "STORAGE": "Tiendas Participantes",
+    "OK" : "Aceptar"
 }
