--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,7 +115,6 @@
     "ASKFORALOAN": "Ask for a loan",
     "MYACCOUNTS": "My Accounts",
     "BALANCETONOTGENERATEINTEREST": "BALANCE TO NOT GENERATE INTEREST",
-    "PAYDAYLIMIT": "PAYDAY LIMIT",
     "PAYMENTREFERENCES": "Payment References",
     "REIMBURSEMENT": "Reimbursement",
     "GENERAL": "GENERAL",
@@ -138,7 +137,6 @@
     "PAYMENTFREQUENCY":"Payment Frequency",
     "DESTINATIONOFTHELOAN":"Loan Destination",
     "SENDCREDITREQUEST":"Send Credit Request",
-    "CANCEL":"Cancel",
     "TORETURN": "To return",
     "SEEYOUSOON":"See you soon",
     "PLEASEWAIT": "Please Wait",
@@ -164,5 +162,6 @@
     "ACEPTAR": "To accept",
     "SALIR": "Are you sure to leave",
     "CLOSE": "Close session",
-    "STORAGE": "Participating Stores"
+    "STORAGE": "Participating Stores",
+    "OK" : "Ok"
 }
