Alerta para cuando se actualizan los datos

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -163,5 +163,7 @@
     "SALIR": "Are you sure to leave",
     "CLOSE": "Close session",
     "STORAGE": "Participating Stores",
-    "OK" : "Ok"
+    "OK" : "Ok",
+    "UPDATEDDATA":"Updated data",
+    "RELOADSCREEN":"Reload the screen to see the changes"
 }
